Remove Google API key from repository

--- a/.env.template
+++ b/.env.template
@@ -17,7 +17,9 @@ STORAGE_ACCOUNT_KEY=
 STORAGE_MAX_WORKERS=
 UPLOAD_STORAGE_CONTAINER_NAME=
 
-
 # Queue
 STORAGE_QUEUE_NAME=
 STORAGE_QUEUE_CONNECTION_STRING=
+
+# Google
+GOOGLE_MAPS_API_KEY=
