Refactor to support deployment of API server through Terraform

--- a/.env.template
+++ b/.env.template
@@ -26,3 +26,11 @@ GOOGLE_MAPS_API_KEY=
 
 # Azure Function
 AZURE_FUNCTION_NAME=
+
+# docker push
+ARM_CLIENT_ID=
+ARM_CLIENT_SECRET=
+ARM_TENANT_ID=
+ACR_NAME=
+WEBAPP_NAME=
+WEBAPP_RESOURCE_GROUP=
