--- a/terraform/.env.template
+++ b/terraform/.env.template
@@ -5,6 +5,14 @@ ARM_SUBSCRIPTION_ID=
 ARM_TENANT_ID=
 
 # Access to backend state
-ARM_ACCESS_KEY=      # set to $(cd ../terraform-backend-state/ && terraform output backend-state-account-key)
-ARM_ACCOUNT_NAME=    # set to $(cd ../terraform-backend-state/ && terraform output backend-state-account-name)
-ARM_CONTAINER_NAME=  # set to $(cd ../terraform-backend-state/ && terraform output backend-state-container-name)
+ARM_ACCESS_KEY=      # set to $(cd ../terraform-bootstrap/ && terraform output backend-state-account-key)
+ARM_ACCOUNT_NAME=    # set to $(cd ../terraform-bootstrap/ && terraform output backend-state-account-name)
+ARM_CONTAINER_NAME=  # set to $(cd ../terraform-bootstrap/ && terraform output backend-state-container-name)
+
+# ACR Configuration
+TF_VAR_acr_id = # set to $(cd ../terraform-bootstrap/ && terraform output acr-id)
+
+# Application Configuration
+TF_VAR_strava_client_id=
+TF_VAR_strava_client_secret=
+TF_VAR_google_maps_api_key=
