--- a/.env.template
+++ b/.env.template
@@ -24,13 +24,13 @@ STORAGE_QUEUE_CONNECTION_STRING=
 # Google
 GOOGLE_MAPS_API_KEY=
 
-# Azure Function
+# Azure Resources
 AZURE_FUNCTION_NAME=
+WEBAPP_NAME=
+WEBAPP_RESOURCE_GROUP=
 
-# docker push
+# Azure Authentication
 ARM_CLIENT_ID=
 ARM_CLIENT_SECRET=
 ARM_TENANT_ID=
 ACR_NAME=
-WEBAPP_NAME=
-WEBAPP_RESOURCE_GROUP=
