upgrade to TF 0.15.1

--- a/terraform/.env.template
+++ b/terraform/.env.template
@@ -16,3 +16,8 @@ TF_VAR_acr_id = # set to $(cd ../terraform-bootstrap/ && terraform output acr-id
 TF_VAR_strava_client_id=
 TF_VAR_strava_client_secret=
 TF_VAR_google_maps_api_key=
+
+terraform init \
+    -backend-config="storage_account_name=terraformxfbp" \
+    -backend-config="container_name=terraform-state" \
+    -backend-config="access_key=$ARM_ACCESS_KEY"
