--- a/.env.template
+++ b/.env.template
@@ -32,5 +32,6 @@ WEBAPP_RESOURCE_GROUP=
 # Azure Authentication
 ARM_CLIENT_ID=
 ARM_CLIENT_SECRET=
+ARM_SUBSCRIPTION_ID=
 ARM_TENANT_ID=
 ACR_NAME=
